--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Github actions playground",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && ncc build lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.5.2"
+  },
+  "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@vercel/ncc": "^0.38.1"
   }
 }
