--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "github-actions-demo",
+  "name": "ga-label-issue",
   "version": "1.0.0",
-  "description": "Github actions playground",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc && ncc build lib/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.5.2"
+    "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "@vercel/ncc": "^0.38.1"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@vercel/ncc": "^0.36.1"
   }
 }
