--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 2
       - uses: ./
         with:
           gh-token: ${{ secrets.GITHUB_TOKEN }}
