--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,9 +8,19 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: ./
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 2
+      - name: Get changes
+        id: changed-files
+        run: git diff --name-only -r HEAD^1 HEAD >> "$GITHUB_OUTPUT"
+      - name: Run action
+        uses: ./
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs }}
         with:
           gh-token: ${{ secrets.GITHUB_TOKEN }}
           label: 'needs-review'
-          files: $(git diff --name-only HEAD^)
+          files: ${{ ALL_CHANGED_FILES }}
