Log number of committed files

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,8 +8,22 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: ./
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 2
+      - name: Process files changed in the current commit
+          run: |
+            changedFiles=$(git diff --name-only HEAD^)
+            for file in $changedFiles; do
+              echo "Processing file: $file"
+            done
+#      - name: Get changes
+#        id: changed-files
+#        run: git diff --name-only -r HEAD^1 HEAD >> "$GITHUB_OUTPUT"
+      - name: Run action
+        uses: ./
         with:
           gh-token: ${{ secrets.GITHUB_TOKEN }}
           label: 'needs-review'
