Update pull_request workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,7 +2,7 @@ name: "Hello"
 
 on:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, synchronize]
    
 jobs:
   hello:
