--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ inputs:
   files:
     description: 'Committed files'
     required: true
+  workspace:
+    description: 'Workspace path'
+    required: true
 
 runs:
   using: "node20"
