--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,7 +2,7 @@ name: "Hello"
 
 on:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, synchronize]
    
 jobs:
   hello:
@@ -29,3 +29,4 @@ jobs:
           gh-token: ${{ secrets.GITHUB_TOKEN }}
           label: 'needs-review'
           files: ${{ steps.changed-files.outputs.all_changed_files }}
+          workspace: ${{ github.workspace }}
